<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    tools:ignore="MissingDefaultResource">

    <ImageView
        android:id="@+id/visa"
        android:layout_width="500dp"
        android:layout_height="735dp"
        android:contentDescription="@string/imagem"
        android:src="@drawable/image" />

    <ImageView
        android:id="@+id/muv"
        android:layout_width="231dp"
        android:layout_height="80dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="95dp"
        android:contentDescription="@string/img"
        android:src="@drawable/image1" />

    <EditText
        android:id="@+id/email"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:drawableStart="@drawable/ic_action_user"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:drawableStart="@drawable/ic_action_pass"
        android:autofillHints=""
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp" />
    <ImageButton
        android:id="@+id/btn_eye"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_action_eye"
        android:layout_marginTop="350dp"
        android:layout_marginStart="270dp"
        android:background="#ffffff">

    </ImageButton>

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:background="@drawable/button_round"
        android:textColor="#fff"
        android:text="@string/login" />

    <View
        android:id="@+id/separador"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/recover"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600dp"
        android:textAlignment="center"
        android:text="@string/recover"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>