<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Message">

    <ImageView
        android:id="@+id/visa"
        android:layout_width="500dp"
        android:layout_height="735dp"
        android:contentDescription="@string/imagem"
        android:src="@drawable/image" />

    <ImageView
        android:id="@+id/muv"
        android:layout_width="231dp"
        android:layout_height="80dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="95dp"
        android:contentDescription="@string/img"
        android:src="@drawable/image1" />

    <ImageView
        android:id="@+id/msg"
        android:layout_width="238dp"
        android:layout_height="135dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="95dp"
        android:contentDescription="@string/img"
        android:src="@drawable/msg" />

    <TextView
        android:id="@+id/sucess"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:textAlignment="center"
        android:text="E-mail enviado com sucesso!"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:background="@drawable/button_round"
        android:textColor="#fff"
        android:text="@string/login" />

</RelativeLayout>